Fix where total text is clipping from botton in Legent tooltip

--- a/src/components/PerformancePanel/Widgets/StackedRadialWidget.scss
+++ b/src/components/PerformancePanel/Widgets/StackedRadialWidget.scss
@@ -1,6 +1,6 @@
 /**
  * @Last modified by:   wahaj
- * @Last modified time: 2018-02-20T15:19:58+11:00
+ * @Last modified time: 2018-02-21T12:26:38+11:00
  *
  * dbKoda - a modern, open source code editor, for MongoDB.
  * Copyright (C) 2017-2018 Southbank Software
@@ -124,7 +124,6 @@
     .rowTotal {
       border-top: 1px solid gray;
       margin-top: 4px;
-      padding-top: 2px;
       opacity: 0.4;
     }
   }
@@ -162,7 +161,6 @@
       .rowTotal {
         border-top: 1px solid gray;
         margin-top: 4px;
-        padding-top: 2px;
         opacity: 0.4;
       }
     }
